--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-22 [俄军乌东攻势受挫，恰索夫亚尔镇仍掌控在乌军手中](/articles/voa/1016224.md)
+
 4-21 [中国青年“掉头转向”入乡就业 难与更难的抉择](/articles/voa/1016225.md)
 
 4-21 [中国驻美大使谢锋哈佛演讲，遭学生活动人士三度抗议打断](/articles/voa/1016226.md)
@@ -598,6 +600,4 @@
 4-10 [台湾“汉光演习”将验证新版接战规定、放宽授权第一击开火](/articles/voa/1016522.md)
 
 4-10 [驻华外国记者：当局用无人机监视我们](/articles/voa/1016523.md)
-
-4-10 [欧盟宣布对中国风力涡轮机供应商进行反补贴调查](/articles/voa/1016524.md)
 
