--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-22 [中国驻加拿大大使丛培武离任](/articles/voa/1016220.md)
+
+4-22 [泽连斯基：更多的美国武器将让乌克兰“有机会”击败俄罗斯](/articles/voa/1016221.md)
+
 4-22 [罗马尼亚边缘组织向习近平和普京求救而受到各界谴责](/articles/voa/1016222.md)
 
 4-22 [俄罗斯人和中亚人加入走线“润”美大军](/articles/voa/1016223.md)
@@ -596,8 +600,4 @@
 4-10 [德国反驳其正在帮助加沙种族灭绝的指称](/articles/voa/1016518.md)
 
 4-10 [美空军部长将乘人工智能自主驾驶战斗机升空，测试未来无人战机](/articles/voa/1016519.md)
-
-4-10 [异见博主称收到钓鱼链接，手法酷似中国安洵文件披露内容](/articles/voa/1016520.md)
-
-4-10 [州最高法院裁决：亚利桑那可以执行一项1864年的法律，几乎将所有堕胎定为犯罪](/articles/voa/1016521.md)
 
