--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-22 [TikTok对美国众院通过可能将其禁止的法案提出言论自由关切](/articles/voa/1016219.md)
+
 4-22 [中国驻加拿大大使丛培武离任](/articles/voa/1016220.md)
 
 4-22 [泽连斯基：更多的美国武器将让乌克兰“有机会”击败俄罗斯](/articles/voa/1016221.md)
@@ -598,6 +600,4 @@
 4-10 [在朔尔茨访华前夕，研究表明德国经济仍依赖中国](/articles/voa/1016517.md)
 
 4-10 [德国反驳其正在帮助加沙种族灭绝的指称](/articles/voa/1016518.md)
-
-4-10 [美空军部长将乘人工智能自主驾驶战斗机升空，测试未来无人战机](/articles/voa/1016519.md)
 
